[gd_scene load_steps=10 format=3 uid="uid://0hqg3crg2ec0"]

[ext_resource type="Texture2D" uid="uid://b8imyqqffd7xe" path="res://Asset/ui/ui_no_outline.png" id="1_1y7jf"]
[ext_resource type="Texture2D" uid="uid://c3pybtbta3oar" path="res://Asset/shell/normal_shell.png" id="2_adb0l"]
[ext_resource type="Script" uid="uid://lwcvc14h2efo" path="res://Script/sub_ui_shell_selector.gd" id="2_qy1sg"]
[ext_resource type="Shader" uid="uid://chslhsr7t500r" path="res://Shader/fire_surf.tres" id="3_qy1sg"]
[ext_resource type="Texture2D" uid="uid://coknwbm1o0tp0" path="res://Asset/alpha_texture/crack.png" id="4_cinhi"]
[ext_resource type="Script" uid="uid://h0n7884yqnt2" path="res://Script/custom_button.gd" id="4_f3c7e"]
[ext_resource type="Texture2D" uid="uid://b3j2oh0a5iehh" path="res://Asset/shell/poision_shell.png" id="5_f3c7e"]

[sub_resource type="LabelSettings" id="LabelSettings_lau7m"]
font_size = 128
font_color = Color(0.215902, 0.215902, 0.215902, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5etg6"]
shader = ExtResource("3_qy1sg")
shader_parameter/Texture2DParameter = ExtResource("4_cinhi")
shader_parameter/ColorParameter = Color(1, 0.35, 0, 1)
shader_parameter/emission = 3.0

[node name="SubUI_ShellSelector" type="NinePatchRect"]
texture_filter = 4
clip_contents = true
offset_right = 128.0
offset_bottom = 320.0
texture = ExtResource("1_1y7jf")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64
script = ExtResource("2_qy1sg")

[node name="SP_Shell0" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(64, 64)
scale = Vector2(0.18, 0.18)
texture = ExtResource("2_adb0l")

[node name="Lb1" type="Label" parent="SP_Shell0"]
z_index = 2
offset_left = 450.0
offset_top = -141.111
offset_right = 867.0
offset_bottom = 36.8888
scale = Vector2(1.5, 1.5)
text = "일반 탄"
label_settings = SubResource("LabelSettings_lau7m")

[node name="CustomButton0" type="Control" parent="SP_Shell0"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -477.0
offset_right = 1400.0
offset_bottom = 60.0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_f3c7e")
metadata/_custom_type_script = "uid://h0n7884yqnt2"

[node name="SP_Shell1" type="Sprite2D" parent="."]
z_index = 3
material = SubResource("ShaderMaterial_5etg6")
position = Vector2(64, 160)
scale = Vector2(0.18, 0.18)
texture = ExtResource("2_adb0l")

[node name="Lb2" type="Label" parent="SP_Shell1"]
z_index = 2
offset_left = 450.0
offset_top = -141.111
offset_right = 867.0
offset_bottom = 36.8888
scale = Vector2(1.5, 1.5)
text = "화염 탄"
label_settings = SubResource("LabelSettings_lau7m")

[node name="CustomButton1" type="Control" parent="SP_Shell1"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -477.0
offset_right = 1400.0
offset_bottom = 60.0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_f3c7e")
metadata/_custom_type_script = "uid://h0n7884yqnt2"

[node name="SP_Shell2" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(64, 256)
scale = Vector2(0.18, 0.18)
texture = ExtResource("5_f3c7e")

[node name="Lb3" type="Label" parent="SP_Shell2"]
z_index = 2
offset_left = 450.0
offset_top = -124.209
offset_right = 739.0
offset_bottom = 53.791
scale = Vector2(1.5, 1.5)
text = "독 탄"
label_settings = SubResource("LabelSettings_lau7m")

[node name="CustomButton2" type="Control" parent="SP_Shell2"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -477.0
offset_right = 1400.0
offset_bottom = 60.0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_f3c7e")
metadata/_custom_type_script = "uid://h0n7884yqnt2"

[node name="Selector" type="NinePatchRect" parent="."]
self_modulate = Color(0, 0.713726, 1, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 144.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_1y7jf")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="SP_Shell0/CustomButton0" to="." method="_on_custom_button_0_pressed"]
[connection signal="pressed" from="SP_Shell1/CustomButton1" to="." method="_on_custom_button_1_pressed"]
[connection signal="pressed" from="SP_Shell2/CustomButton2" to="." method="_on_custom_button_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
